--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       <div id="screen-intro" class="screen active">
         <h1>El Secreto del Zoco de las Estrellas</h1>
         <div class="zellige-line"></div>
-        <p>En la noche de tu cumpleaños recibes un mensaje misterioso:</p>
+        <p>Acabas de recibir un mensaje misterioso:</p>
         <p class="small" style="font-style: italic; text-align: center;">
           “Un regalo espera a quien siga la luz del desierto.”
         </p>
@@ -237,7 +237,7 @@
       <div id="screen-story" class="screen">
         <h2>El Mercader de las Estrellas</h2>
         <div class="zellige-line"></div>
-        <p>Apareces en un zoco marroquí. Un mercader te entrega una caja con tres cerraduras.</p>
+        <p>Cierra los ojos durante 5 segundos (1,2,3,4,5). Acabas de aparecer en un zoco. Un mercader te entrega una caja con tres cerraduras.</p>
         <button class="btn" onclick="goToScreen('screen-test1')">Primera prueba</button>
       </div>
 
@@ -272,7 +272,7 @@
 
       <!-- PANTALLA FINAL -->
       <div id="screen-final" class="screen">
-        <h2>🎉 ¡Feliz Cumpleaños! 🎉</h2>
+        <h2>🎉 ¡Feliz Cumpleaños, habibti! 🎉</h2>
         <p>Tu regalo es un viaje a Marruecos ✈️🇲🇦</p>
         <div class="camel-container">
           <div class="camel">🐪</div>
