--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       pointer-events: none;
     }
 
-    h1, h2 {
+    h1, h2, h3 {
       margin-bottom: 12px;
       text-align: center;
     }
@@ -73,8 +73,13 @@
       box-shadow: 0 6px 16px rgba(0,0,0,0.45);
     }
 
-    .screen { display: none; }
-    .screen.active { display: block; }
+    .screen {
+      display: none;
+    }
+
+    .screen.active {
+      display: block;
+    }
 
     .zellige-line {
       height: 8px;
@@ -129,6 +134,19 @@
       cursor: pointer;
       border: 1px solid rgba(255,215,0,0.2);
       text-align: center;
+      transition: 0.2s;
+    }
+
+    .object-card span {
+      font-size: 2rem;
+      display: block;
+      margin-bottom: 6px;
+    }
+
+    .colors-row {
+      display: flex;
+      gap: 10px;
+      margin-top: 10px;
     }
 
     .color-box {
@@ -136,35 +154,63 @@
       height: 60px;
       border-radius: 12px;
       display: flex;
-      align-items: center;
+      align-items: flex-end;
       justify-content: center;
       cursor: pointer;
-      color: white;
-      font-weight: bold;
+      padding-bottom: 6px;
+      border: 1px solid rgba(255,255,255,0.4);
+      font-size: 0.9rem;
     }
 
-    .color-azul { background: #1e88e5; }
-    .color-ocre { background: #ffb74d; }
-    .color-verde { background: #26a69a; }
+    .color-azul { background: linear-gradient(135deg,#1a4f7a,#1e88e5); }
+    .color-ocre { background: linear-gradient(135deg,#bf8b3b,#ffb74d); }
+    .color-verde { background: linear-gradient(135deg,#00796b,#26a69a); }
 
     .desert-area {
       height: 180px;
       border-radius: 18px;
-      background: linear-gradient(to top, #c96f28 0%, #f4a261 40%, #26163b 40%);
+      background: linear-gradient(to top, #c96f28 0%, #f4a261 40%, #26163b 40%, #1d2a3a 100%);
       position: relative;
       overflow: hidden;
+      border: 1px solid rgba(255,215,0,0.25);
+      box-shadow: inset 0 0 25px rgba(0,0,0,0.7);
+    }
+
+    .stars {
+      position: absolute;
+      inset: 0;
+      background-image:
+        radial-gradient(circle at 20% 20%, rgba(255,255,255,0.8) 0, transparent 40%),
+        radial-gradient(circle at 80% 30%, rgba(255,255,255,0.75) 0, transparent 40%),
+        radial-gradient(circle at 60% 60%, rgba(255,255,255,0.7) 0, transparent 40%);
+      opacity: 0.35;
+    }
+
+    .dune {
+      position: absolute;
+      bottom: 0;
+      width: 200%;
+      height: 60px;
+      background: radial-gradient(circle at 50% 0, rgba(255,255,255,0.2), transparent 60%),
+                  linear-gradient(to right,#d38b3c,#e9c46a,#d38b3c);
+      opacity: 0.7;
+      border-radius: 50% 50% 0 0;
     }
 
     .light {
+      position: absolute;
       width: 30px;
       height: 30px;
       border-radius: 50%;
-      background: radial-gradient(circle, #ffe082 0%, #ffc107 40%, transparent);
-      position: absolute;
+      background: radial-gradient(circle,#ffe082 0%,#ffc107 40%,transparent 70%);
+      box-shadow: 0 0 12px rgba(255,241,118,0.9);
       cursor: pointer;
       display: flex;
       align-items: center;
       justify-content: center;
+      color: #4e342e;
+      font-weight: 700;
+      font-size: 0.8rem;
     }
 
     .camel-container {
@@ -179,13 +225,33 @@
       left: -80px;
       bottom: 0;
       font-size: 3rem;
-      animation: camel-walk 7s linear forwards;
+      animation: camel-walk 7s linear forwards, camel-bob 1s ease-in-out infinite;
+    }
+
+    .camel::after {
+      content: "✨";
+      position: absolute;
+      top: -10px;
+      right: -10px;
+      font-size: 1.3rem;
+      animation: spark 1s infinite alternate;
     }
 
     @keyframes camel-walk {
       0% { transform: translateX(0); }
-      100% { transform: translateX(120vw); }
+      100% { transform: translateX(140vw); }
     }
+
+    @keyframes camel-bob {
+      0%,100% { transform: translateY(0); }
+      50% { transform: translateY(-4px); }
+    }
+
+    @keyframes spark {
+      0% { opacity: 0.4; transform: translateY(0) scale(0.8); }
+      100% { opacity: 1; transform: translateY(-4px) scale(1); }
+    }
+
   </style>
 </head>
 
@@ -198,7 +264,9 @@
         <h1>El Secreto del Zoco de las Estrellas</h1>
         <div class="zellige-line"></div>
         <p>En la noche de tu cumpleaños recibes un mensaje misterioso:</p>
-        <p style="font-style: italic; text-align:center;">“Un regalo espera a quien siga la luz del desierto.”</p>
+        <p class="small" style="text-align:center; font-style:italic;">
+          “Un regalo espera a quien siga la luz del desierto.”
+        </p>
         <button class="btn" onclick="goTo('screen-story')">Comenzar</button>
       </div>
 
@@ -206,7 +274,8 @@
       <div id="screen-story" class="screen">
         <h2>El Mercader de las Estrellas</h2>
         <div class="zellige-line"></div>
-        <p>Apareces en un zoco de Marruecos. Un mercader te entrega una caja con tres cerraduras.</p>
+        <p>Apareces en un zoco marroquí iluminado.  
+        Un mercader anciano te entrega una caja con <strong>tres cerraduras</strong>.</p>
 
         <div class="box-locked"></div>
         <div class="locks">
@@ -220,46 +289,84 @@
 
       <!-- PANTALLA 3 -->
       <div id="screen-test1" class="screen">
-        <h2>Prueba 1</h2>
+        <h2>Prueba 1: El Zoco de los Ecos</h2>
+        <div class="zellige-line"></div>
+        <p>Elige un objeto del zoco. La magia hará el resto.</p>
+
         <div class="objects-grid">
-          <div class="object-card" onclick="test1()">🍵 Tetera</div>
-          <div class="object-card" onclick="test1()">🕌 Minarete</div>
-          <div class="object-card" onclick="test1()">🛠️ Artesano</div>
-          <div class="object-card" onclick="test1()">🐪 Camello</div>
+          <div class="object-card" onclick="test1()">
+            <span>🍵</span><p>Tetera de menta</p>
+          </div>
+          <div class="object-card" onclick="test1()">
+            <span>🕌</span><p>Minarete lejano</p>
+          </div>
+          <div class="object-card" onclick="test1()">
+            <span>🛠️</span><p>Artesano del cobre</p>
+          </div>
+          <div class="object-card" onclick="test1()">
+            <span>🐪</span><p>Camello del zoco</p>
+          </div>
         </div>
-        <p id="msg1"></p>
+
+        <p id="msg1" class="small" style="text-align:center;"></p>
       </div>
 
       <!-- PANTALLA 4 -->
       <div id="screen-test2" class="screen">
-        <h2>Prueba 2</h2>
-        <div class="colors-row" style="display:flex; gap:10px;">
-          <div class="color-box color-azul" data-color="azul" onclick="colorClick(this)">Azul</div>
-          <div class="color-box color-ocre" data-color="ocre" onclick="colorClick(this)">Ocre</div>
-          <div class="color-box color-verde" data-color="verde" onclick="colorClick(this)">Verde</div>
+        <h2>Prueba 2: Los Colores de Marruecos</h2>
+        <div class="zellige-line"></div>
+        <p>Toca los tres colores, en el orden que quieras.</p>
+
+        <div class="colors-row">
+          <div class="color-box color-azul" data-color="azul" onclick="colorClick(this)">
+            <p>Azul Majorelle</p>
+          </div>
+          <div class="color-box color-ocre" data-color="ocre" onclick="colorClick(this)">
+            <p>Ocre del desierto</p>
+          </div>
+          <div class="color-box color-verde" data-color="verde" onclick="colorClick(this)">
+            <p>Verde de zellige</p>
+          </div>
         </div>
-        <p id="msg2"></p>
+
+        <p id="msg2" class="small" style="text-align:center;"></p>
       </div>
 
       <!-- PANTALLA 5 -->
       <div id="screen-test3" class="screen">
-        <h2>Prueba 3</h2>
+        <h2>Prueba 3: Las Dunas del Sueño</h2>
+        <div class="zellige-line"></div>
+        <p>Toca la luz 3 veces para seguirla por el desierto.</p>
+
         <div id="desert-area" class="desert-area">
+          <div class="stars"></div>
+          <div class="dune"></div>
           <div id="light" class="light" onclick="lightClick()">★</div>
         </div>
-        <p id="msg3"></p>
+
+        <p id="msg3" class="small" style="text-align:center;"></p>
       </div>
 
       <!-- FINAL -->
       <div id="screen-final" class="screen">
         <h2>La Caja se Abre</h2>
-        <p>🎉 Tu regalo es un viaje a Marruecos 🎉</p>
+        <div class="zellige-line"></div>
+        <p>Dentro encuentras una tarjeta:</p>
+
+        <div class="final-box">
+          <div class="final-card-text">
+            <h2>🎉 ¡Feliz cumpleaños! 🎉</h2>
+            <p>Tu regalo es:</p>
+            <p style="font-weight:bold;">🧳 Un viaje a Marruecos 🧳</p>
+            <p class="final-sub">Pasearemos por zocos y seguiremos juntos la luz del desierto.</p>
+          </div>
+        </div>
 
         <div class="camel-container">
           <div class="camel">🐪</div>
         </div>
 
-        <button class="btn" onclick="restart()">Ver otra vez</button>
+        <button class="btn" onclick="restart()">Ver la sorpresa otra vez</button>
       </div>
 
     </div>
@@ -271,53 +378,73 @@
       document.getElementById(id).classList.add('active');
     }
 
-    // PRUEBA 1
+    /* PRUEBA 1 */
     function test1() {
       document.getElementById("lock1").classList.add("open");
-      document.getElementById("msg1").textContent = "¡Bien hecho!";
-      setTimeout(()=>goTo("screen-test2"),1000);
+      document.getElementById("msg1").textContent = "¡Muy bien!";
+      setTimeout(() => goTo("screen-test2"), 1000);
     }
 
-    // PRUEBA 2
+    /* PRUEBA 2 */
     let colors = new Set();
     function colorClick(el){
-      colors.add(el.dataset.color);
-      el.style.opacity = ".7";
-      document.getElementById("msg2").textContent = "Sigue...";
+      const color = el.dataset.color;
+      if(!colors.has(color)){
+        colors.add(color);
+        el.classList.add("clicked");
+      }
       if(colors.size===3){
         document.getElementById("lock2").classList.add("open");
-        setTimeout(()=>goTo("screen-test3"),1000);
+        document.getElementById("msg2").textContent = "Perfecto";
+        setTimeout(()=>goTo("screen-test3"),1200);
+      } else {
+        document.getElementById("msg2").textContent = "Sigue…";
       }
     }
 
-    // PRUEBA 3
-    let lightCount=0;
-    function lightClick(){
-      lightCount++;
+    /* PRUEBA 3 */
+    let lightCount = 0;
+
+    function resetLightPosition(){
       const area=document.getElementById("desert-area");
       const light=document.getElementById("light");
+      const r=area.getBoundingClientRect();
+
+      const x=Math.random()*(r.width-40)+10;
+      const y=Math.random()*(r.height-40)+10;
+
+      light.style.left=x+"px";
+      light.style.top=y+"px";
+    }
+
+    function lightClick(){
+      lightCount++;
       const msg=document.getElementById("msg3");
 
-      if(lightCount<3){
-        msg.textContent="Sigue la luz...";
-        const r=area.getBoundingClientRect();
-        light.style.left=(Math.random()*(r.width-30))+"px";
-        light.style.top=(Math.random()*(r.height-30))+"px";
+      if(lightCount < 3){
+        msg.textContent="Has seguido la luz...";
+        resetLightPosition();
       } else {
-        document.getElementById("lock3").classList.add("open");
         msg.textContent="La caja está lista.";
+        document.getElementById("lock3").classList.add("open");
         setTimeout(()=>goTo("screen-final"),1200);
       }
     }
 
-    // REINICIAR
+    /* REINICIAR */
     function restart(){
       colors.clear();
       lightCount=0;
-      document.querySelectorAll(".color-box").forEach(c=>c.style.opacity="1");
-      document.querySelectorAll(".lock").forEach(l=>l.classList.remove("open"));
+      document.querySelectorAll('.color-box').forEach(c=>c.classList.remove('clicked'));
+      document.querySelectorAll('.lock').forEach(l=>l.classList.remove('open'));
+      document.getElementById("msg1").textContent="";
+      document.getElementById("msg2").textContent="";
+      document.getElementById("msg3").textContent="";
       goTo("screen-intro");
     }
+
+    window.onload = resetLightPosition;
   </script>
+
 </body>
 </html>
