--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ function test1(el){
   let frase = "";
 
   if(item === "te")
-    frase = "“La tetera marroquí guarda el arte de la paciencia y la hospitalidad.”";
+    frase = "“La tetera guarda el arte de la paciencia y la hospitalidad.”";
 
   if(item === "minarete")
     frase = "“El minarete guía a los viajeros cuando la noche oculta los caminos.”";
@@ -441,7 +441,7 @@ function test1(el){
 
   document.getElementById("msg1").textContent = frase;
 
-  setTimeout(()=>goTo('screen-test2'), 2000);
+  setTimeout(()=>goTo('screen-test2'), 3000);
 }
 
 /* --- PRUEBA 2: COLORES --- */
@@ -471,7 +471,7 @@ function colorClick(el){
     setTimeout(()=>{
       document.getElementById("msg2").textContent =
       "“Has unido los colores del alma marroquí.”";
-      setTimeout(()=>goTo('screen-test3'),2000);
+      setTimeout(()=>goTo('screen-test3'),3000);
     },300);
   }
 }
@@ -500,7 +500,7 @@ function lightClick(){
   } else {
     document.getElementById("msg3").textContent =
       "“La luz te guía al destino final…”";
-    setTimeout(()=>goTo('screen-final'), 2000);
+    setTimeout(()=>goTo('screen-final'), 3000);
   }
 }
 
